force-app/main/default/objects/cdcpc__RD_Test_Codes__c/fields/cdcpc__DiscTest__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__DiscTest__c</fullName>
    <label>DiscTest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>