force-app/main/default/objects/cdcpc__RD_Test_Codes__c/fields/cdcpc__GirdleCovTest__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__GirdleCovTest__c</fullName>
    <label>GirdleCovTest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>