force-app/main/default/objects/cdcpc__RD_Test_Codes__c/fields/cdcpc__HandSuptTest__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__HandSuptTest__c</fullName>
    <label>HandSuptTest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>