force-app/main/default/objects/cdcpc__RD_Test_Codes__c/fields/cdcpc__HolderInlTest__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__HolderInlTest__c</fullName>
    <label>HolderInlTest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>