force-app/main/default/objects/cdcpc__RD_Test_Codes__c/fields/cdcpc__HolderOutTest__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__HolderOutTest__c</fullName>
    <label>HolderOutTest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>