force-app/main/default/objects/cdcpc__RD_Test_Codes__c/fields/cdcpc__IGaskTest__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__IGaskTest__c</fullName>
    <label>IGaskTest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>