force-app/main/default/objects/cdcpc__RD_Test_Codes__c/fields/cdcpc__IRingTest__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__IRingTest__c</fullName>
    <label>IRingTest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>