force-app/main/default/objects/cdcpc__RD_Test_Codes__c/fields/cdcpc__MSealTest__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__MSealTest__c</fullName>
    <label>MSealTest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>