force-app/main/default/objects/cdcpc__RD_Test_Codes__c/fields/cdcpc__OGaskTest__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__OGaskTest__c</fullName>
    <label>OGaskTest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>