force-app/main/default/objects/cdcpc__RD_Test_Codes__c/fields/cdcpc__OLinerTest__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__OLinerTest__c</fullName>
    <label>OLinerTest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>