force-app/main/default/objects/cdcpc__RD_Test_Codes__c/fields/cdcpc__VacSuptTest__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__VacSuptTest__c</fullName>
    <label>VacSuptTest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>