force-app/main/default/objects/cdcpc__RD_Test_Codes__c/listViews/cdcpc__All.listView-meta.xml
<ListView>
    <fullName>cdcpc__All</fullName>
    <columns>NAME</columns>
    <columns>cdcpc__NACE__c</columns>
    <columns>cdcpc__PTC__c</columns>
    <columns>cdcpc__Shell_Test__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>